--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url(header.css);
+@import url(banner.css);
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box !important;
 }
 
 body {
@@ -10,4 +13,25 @@ body {
     height: 5768px;
     background-position: top center;
     background-repeat: no-repeat;
+    font-family: 'Roboto', sans-serif;
+}
+
+div,
+p,
+b,
+strong,
+span,
+li,
+a,
+sup {
+    font-size: 16px;
+}
+
+h2 {
+    font-size: 2.25rem;
+}
+
+.contenedor {
+    width: 86%;
+    margin: 0 auto;
 }
