--- a/css/banner.css
+++ b/css/banner.css
@@ -13,9 +13,12 @@
                 position: absolute;
                 width: 100%;
                 height: 100%;
-                filter: blur(6px);
+                /* filter: blur(6px); */
                 /* background: rgba(25, 55, 255, 1); */
-                background-image: url('../img/1.jpg');
+                background-image: url('../img/bg-1.jpg');
+                background-attachment: fixed;
+                background-repeat: no-repeat;
+                background-position: left center;
             }
             
             .info-banner {
