--- a/css/caracteristicas.css
+++ b/css/caracteristicas.css
@@ -61,6 +61,16 @@
                 margin-top: 32px;
                 padding-bottom: 44px;
                 border-bottom: solid 2px #ccc;
+                padding-top: 39px;
+            }
+            
+            .libros img {
+                width: 49%;
+                border: solid 1px #000;
+                height: 471px;
+                bottom: 0;
+                position: relative;
+                padding-top: 80px;
             }
             
             .libros h2 {
@@ -80,7 +90,7 @@
                 background-color: #3fbbc0;
                 color: white;
                 font-weight: 800;
-                font-family: Arial;
+                /* font-family: Arial; */
                 position: absolute;
                 border-radius: 8px;
                 top: 50px;
@@ -96,12 +106,16 @@
                 width: 100%;
                 position: relative;
                 font-size: 0;
+                /* padding-top: 23px; */
             }
             
             .items-libros img {
                 display: inline-block;
-                width: 50%;
                 vertical-align: top;
+                padding-top: 36px;
+                width: 48.5%;
+                height: -8%;
+                padding-left: 10px;
             }
             
             .items-libros ul {
@@ -110,31 +124,58 @@
                 vertical-align: top;
             }
             
+            .items-libros ul li {
+                padding-top: 20px;
+                padding-bottom: 7px;
+            }
+            
             .items-libros ul li a img {
                 display: inline-block;
-                width: 20%;
                 vertical-align: top;
+                width: 62px;
+                padding-top: 16px;
+                padding-left: 17px;
+                margin-left: 10px;
+                padding-bottom: 0px;
+                height: 62px;
             }
             
             .items-libros ul li a {
                 display: block;
                 font-size: 0;
+                color: #444;
+            }
+            
+            .items-libros ul li a:active,
+            .items-libros ul li:visited {
+                color: #444;
             }
             
             .items-libros ul li {
-                margin-bottom: 50px;
-                margin-top: 20px;
+                /* margin-bottom: 50px;
+                margin-top: 20px; */
             }
             
             .cont-contenido {
                 display: inline-block;
                 vertical-align: top;
-                width: 80%;
+                width: 75%;
                 padding: 0 10px;
             }
             
             .cont-contenido h4 {
-                margin-bottom: 5px;
-                font-family: Arial, Helvetica, sans-serif;
+                /* margin-bottom: 5px; */
+                /* font-family: Arial, Helvetica, sans-serif; */
                 font-size: large;
+                font-size: 24px;
+                padding-left: 9px;
+                padding-top: 11px;
+                font-weight: 400;
+                padding-bottom: 6px;
+            }
+            
+            .cont-contenido p {
+                padding-left: 9px;
+                line-height: 23px;
+                padding-top: 4px;
             }
