--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,16 @@
 @import url(header.css);
 @import url(banner.css);
 @import url(caracteristicas.css);
+@import url(doctors.css);
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box !important;
+    list-style: none;
 }
 
 body {
-    /* background: url(../propuesta.png); */
+    background: url(../propuesta.png);
     width: 100%;
     height: 5768px;
     background-position: top center;
