--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 @import url(banner.css);
 @import url(caracteristicas.css);
 @import url(doctors.css);
+@import url(instalaciones.css);
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +12,7 @@
 }
 
 body {
-    background: url(../propuesta.png);
+    /* background: url(../propuesta.png); */
     width: 100%;
     height: 5768px;
     background-position: top center;
