--- a/css/instalaciones.css
+++ b/css/instalaciones.css
@@ -1,5 +1,6 @@
 .instalaciones {
     text-align: center;
+    padding-bottom: 54px;
 }
 
 .instalaciones .contenedor h2 {
@@ -103,7 +104,7 @@
 .dots {
     width: 100%;
     text-align: center;
-    margin: 14px auto;
+    margin: 5px auto;
     padding: 0 10px;
     /* height: 30px; */
 }
