--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 @import url(caracteristicas.css);
 @import url(doctors.css);
 @import url(instalaciones.css);
+@import url(testimonios.css);
 * {
     margin: 0;
     padding: 0;
@@ -12,7 +13,7 @@
 }
 
 body {
-    /* background: url(../propuesta.png); */
+    background: url(../propuesta.png);
     width: 100%;
     height: 5768px;
     background-position: top center;
