--- a/css/header.css
+++ b/css/header.css
@@ -6,7 +6,7 @@
                 letter-spacing: .7px;
                 /* border: solid 1px#000 !important; */
             }
-            
+
             .superior p {
                 display: inline-block;
                 width: 49%;
@@ -18,15 +18,15 @@
                 color: #fff;
                 font-weight: 700; */
             }
-            
+
             .fecha {
                 padding-left: 12px;
             }
-            
+
             .numero-contacto {
                 text-align: right;
             }
-            
+
             .inferior {
                 width: 100%;
                 background-color: rgba(255, 255, 255, 1);
@@ -34,7 +34,7 @@
                 box-shadow: 0px 1px 9px 0px #ccc;
             }
             /*----------------------------------------Barra de navegacion--------------------------------------------->>>>>*/
-            
+
             .logo,
             nav,
             nav ul li {
@@ -42,26 +42,26 @@
                 vertical-align: middle;
                 position: relative;
             }
-            
+
             .logo {
                 width: 20%;
             }
-            
+
             .logo img {
                 width: 100%;
                 max-width: 160px;
                 margin-top: 5px;
                 margin-left: 4px;
             }
-            
+
             nav {
                 width: 76%;
             }
-            
+
             nav ul {
                 text-align: right;
             }
-            
+
             nav ul li a,
             .sub-menu li a {
                 color: #666666;
@@ -73,16 +73,16 @@
                 letter-spacing: 1px;
                 display: block;
             }
-            
+
             nav ul li a:hover,
             .sub-menu li a:hover {
                 color: #3fbbc0;
             }
-            
+
             nav>ul>li:last-child {
                 padding-right: 10px;
             }
-            
+
             nav>ul>li:last-child:after {
                 content: "";
                 border-top: 5px solid #666666;
@@ -92,11 +92,11 @@
                 top: 21px;
                 right: 13px;
             }
-            
+
             nav>ul>li:hover:last-child:after {
                 border-top: 5px solid #3fbbc0;
             }
-            
+
             nav ul li:last-child span {
                 background-color: #e9372e;
                 color: #ffffff;
@@ -107,13 +107,14 @@
                 right: -8px;
                 top: -10px;
             }
-            
+
             .sub-menu {
                 display: none;
+                z-index:9999; 
             }
-            
-            nav>ul>li:hover:last-child .sub-menu {
-                display: block;
+
+            nav>ul>li:last-child .sub-menu {
+                display: none;
                 position: absolute;
                 background-color: #ffffff;
                 min-width: 160px;
@@ -123,7 +124,7 @@
                 border: 1px solid rgba(0, 0, 0, 0.15);
                 box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
             }
-            
+
             .sub-menu li {
                 display: block;
             }
