--- a/css/testimonios.css
+++ b/css/testimonios.css
@@ -5,7 +5,7 @@
         padding: 0;
         display: block;
         width: 100%;
-        height: 100%;
+        /* height: 100%; */
         /* background-image: url(../img/overlay.png); */
         background-repeat: no-repeat;
         background-position: top center;
@@ -45,7 +45,8 @@
         background: rgba(255, 255, 255, 1);
         border-radius: 8px;
     }
-    
+    /* TODO flecha del globo*/
+    /*     
     .testimonios .overlay .rotador-testimonios-item .comentario::after {
         position: absolute;
         display: block;
@@ -59,6 +60,7 @@
         margin-left: 8.8%;
         box-shadow: 0px 3px 0px 0px #000;
     }
+     */
     
     .testimonios .overlay .rotador-testimonios-item h4 {
         padding: 12px 16px;
