--- a/css/caracteristicas.css
+++ b/css/caracteristicas.css
@@ -122,6 +122,7 @@
                 display: inline-block;
                 width: 25%;
                 vertical-align: top;
+                padding-top: 24px;
             }
             
             .items-libros ul li {
