--- a/css/header.css
+++ b/css/header.css
@@ -4,29 +4,43 @@
                 height: 55px;
                 padding-top: 12px;
                 letter-spacing: .7px;
-                /* border: solid 1px#000 !important; */
             }
-
+            
             .superior p {
                 display: inline-block;
-                width: 49%;
                 font-size: 16px;
                 font-weight: 800;
-                /*
-                font-size: 16px;
-                padding: 15px 10px 20px;
-                color: #fff;
-                font-weight: 700; */
             }
-
+            
             .fecha {
                 padding-left: 12px;
+                width: 50%;
             }
-
+            
             .numero-contacto {
-                text-align: right;
+                float: right;
             }
-
+            
+            .menu {
+                display: none;
+                float: right;
+                border: solid 3px rgb(63, 187, 192, .5);
+                padding: 4px;
+                border-radius: 6px;
+                color: rgba(63, 187, 192, .7);
+                padding-right: 5px;
+            }
+            
+            .menu:hover {
+                color: rgba(63, 187, 192, 1);
+                border: solid 3px rgb(63, 187, 192, 1);
+                cursor: pointer;
+            }
+            
+            .menu span i {
+                font-size: 2rem;
+            }
+            
             .inferior {
                 width: 100%;
                 background-color: rgba(255, 255, 255, 1);
@@ -34,7 +48,7 @@
                 box-shadow: 0px 1px 9px 0px #ccc;
             }
             /*----------------------------------------Barra de navegacion--------------------------------------------->>>>>*/
-
+            
             .logo,
             nav,
             nav ul li {
@@ -42,26 +56,26 @@
                 vertical-align: middle;
                 position: relative;
             }
-
+            
             .logo {
                 width: 20%;
             }
-
+            
             .logo img {
                 width: 100%;
                 max-width: 160px;
                 margin-top: 5px;
                 margin-left: 4px;
             }
-
+            
             nav {
                 width: 76%;
             }
-
+            
             nav ul {
                 text-align: right;
             }
-
+            
             nav ul li a,
             .sub-menu li a {
                 color: #666666;
@@ -73,16 +87,16 @@
                 letter-spacing: 1px;
                 display: block;
             }
-
+            
             nav ul li a:hover,
             .sub-menu li a:hover {
                 color: #3fbbc0;
             }
-
+            
             nav>ul>li:last-child {
                 padding-right: 10px;
             }
-
+            
             nav>ul>li:last-child:after {
                 content: "";
                 border-top: 5px solid #666666;
@@ -92,11 +106,11 @@
                 top: 21px;
                 right: 13px;
             }
-
+            
             nav>ul>li:hover:last-child:after {
                 border-top: 5px solid #3fbbc0;
             }
-
+            
             nav ul li:last-child span {
                 background-color: #e9372e;
                 color: #ffffff;
@@ -107,12 +121,12 @@
                 right: -8px;
                 top: -10px;
             }
-
+            
             .sub-menu {
                 display: none;
-                z-index:9999; 
+                z-index: 9999;
             }
-
+            
             nav>ul>li:last-child .sub-menu {
                 display: none;
                 position: absolute;
@@ -124,7 +138,37 @@
                 border: 1px solid rgba(0, 0, 0, 0.15);
                 box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
             }
-
+            
             .sub-menu li {
                 display: block;
+            }
+            
+            @media screen and (max-width:768px) {
+                .superior {
+                    display: none;
+                }
+                .logo img {
+                    width: 130px;
+                    height: 35px;
+                }
+            }
+            
+            @media screen and (max-width:1024px) {
+                /* .inferior {
+                    display: none;
+                } */
+                .menu {
+                    display: block;
+                }
+                nav ul li {
+                    display: block;
+                }
+                nav {
+                    width: 100%;
+                    background: transparent;
+                }
+                nav ul {
+                    text-align: left;
+                    max-width: 85px;
+                }
             }
