--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,8 @@
 @import url(instalaciones.css);
 @import url(testimonios.css);
 @import url(price-table.css);
+@import url(asociados.css);
+@import url(footer.css);
 * {
     margin: 0;
     padding: 0;
@@ -13,10 +15,18 @@
     list-style: none;
 }
 
+:root {
+    --color-primario: #3fbbc0;
+    /*--color-secundario:;
+    --color-msg-exito:;
+    --color-msg-fallido:; */
+}
+
 body {
-    background: url(../propuesta.png);
+    /* background: url(../propuesta.png); */
+    background-size: cover;
     width: 100%;
-    height: 5768px;
+    /* height: 5768px; */
     background-position: top center;
     background-repeat: no-repeat;
     font-family: 'Roboto', sans-serif;
@@ -40,4 +50,10 @@ h2 {
 .contenedor {
     width: 86%;
     margin: 0 auto;
+}
+
+@media screen and (max-width:768px) {
+    .contenedor {
+        width: 95%;
+    }
 }
