--- a/css/banner.css
+++ b/css/banner.css
@@ -156,4 +156,7 @@
                 .datos {
                     width: 100%;
                 }
+                .arrow-up {
+                    bottom: 5px
+                }
             }
