--- a/css/caracteristicas.css
+++ b/css/caracteristicas.css
@@ -180,3 +180,58 @@
                 line-height: 23px;
                 padding-top: 4px;
             }
+            
+            @media screen and (max-width:425px) {
+                .caracteristicas article {
+                    width: 100%;
+                }
+            }
+            
+            @media screen and (max-width:768px) {
+                .caracteristicas {
+                    flex-wrap: wrap;
+                    flex-direction: row;
+                }
+                .caracteristicas article {
+                    width: 50%;
+                }
+                .items-libros ul {
+                    display: block;
+                    width: 100%;
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+                .items-libros ul li {
+                    margin: 0 auto;
+                }
+                .items-libros img+ul {
+                    padding-bottom: 0;
+                }
+            }
+            
+            @media screen and (max-width:1024px) {
+                .libros {
+                    text-align: center;
+                }
+                .libros a {
+                    position: relative;
+                    top: 24px;
+                    right: 0;
+                    margin-bottom: 24px;
+                    text-align: center;
+                    width: 90%;
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+                .items-libros img {
+                    display: none;
+                }
+                .items-libros ul {
+                    width: 50%;
+                    padding-bottom: 24px;
+                }
+                .items-libros ul li {
+                    display: block;
+                }
+            }
