--- a/css/header.css
+++ b/css/header.css
@@ -160,14 +160,14 @@
                 .menu {
                     display: block;
                 }
-                nav ul li {
+                .menu+nav ul li {
                     display: block;
                 }
                 nav {
                     width: 100%;
                     background: transparent;
                 }
-                nav ul {
+                .menu+nav ul {
                     text-align: left;
                     max-width: 85px;
                 }
