--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ body {
     /* background: url(../propuesta.png); */
     background-size: cover;
     width: 100%;
+    overflow-x: hidden;
     /* height: 5768px; */
     background-position: top center;
     background-repeat: no-repeat;
