fix testimonial images responsive

--- a/css/asociados.css
+++ b/css/asociados.css
@@ -34,6 +34,6 @@
 .asociados .flex {
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: ; */
+    justify-content: center;
     padding-top: 61px;
 }
